--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <!-- Favicon with terminal window icon  -->
+  <link rel="icon" type="image/svg+xml" href="src\terminal-icon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Nishant Karn : Cloud Engineer and Digital Marketing Expert</title>
 </head>
